eks-live-demo-vpc-IaC/eks_live_demo_vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: EKS LIVE DEMO VPC AND SUBNETS

###################################################################################
#Parameters to create EKS Demo VPC with two public subnets and two private subnets#
###################################################################################

Parameters:
  AvailabilityZoneSelection1:
    Description: Availability Zone
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-west-2a # Change to your own AZ
  
  AvailabilityZoneSelection2:
    Description: Availability Zone
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-west-2b # Change to your own AZ
  
  EKSDemoVPCidrBlock:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.1.0.0/16
    Description: eks-demo-vpc-cidr-block
    Type: String
  
  EKSPublicSubAZ1CidrBlock:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.1.1.0/28
    Description: eks-demo-public-subnet-az-1
    Type: String

  EKSPublicSubAZ2CidrBlock:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.1.2.0/28
    Description: eks-demo-public-subnet-az-2
    Type: String
    
  EKSPrivateSubAZ1CidrBlock:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.1.3.0/28
    Description: eks-demo-private-subnet-az-1 
    Type: String
    
  EKSPrivateSubAZ2CidrBlock:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.1.4.0/28
    Description: eks-demo-private-subnet-az-2
    Type: String

#############################################################################################################
#Resources Section to launch EKS Demo VPC and Subnets with Internet Gateways, Nat Gateways, and Route Tables#
########################################################################################################

#####################
#Create VPC Resource#
#####################

Resources:
  EksDemoVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref EKSDemoVPCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: EKS-DEMO-VPC

###############################
#Create Public Subnets AZ1 & 2#
###############################

  EksDemoPubSubAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EksDemoVpc
      MapPublicIpOnLaunch: true
      CidrBlock: !Ref EKSPublicSubAZ1CidrBlock
      AvailabilityZone: !Ref AvailabilityZoneSelection1
      Tags:
        - Value: EKS-PUB-SUB-AZ-1
          Key: Name
  
  EksDemoPubSubAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EksDemoVpc
      MapPublicIpOnLaunch: true
      CidrBlock: !Ref EKSPublicSubAZ2CidrBlock
      AvailabilityZone: !Ref AvailabilityZoneSelection2
      Tags:
        - Value: EKS-PUB-SUB-AZ-2
          Key: Name

################################
#Create Private Subnets AZ1 & 2#
################################

  EksDemoPrivSubAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EksDemoVpc
      MapPublicIpOnLaunch: false
      CidrBlock: !Ref EKSPrivateSubAZ1CidrBlock
      AvailabilityZone: !Ref AvailabilityZoneSelection1
      Tags:
        - Value: EKS-PRIV-SUB-AZ-1
          Key: Name
  
  EksDemoPrivSubAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref EksDemoVpc
      MapPublicIpOnLaunch: false
      CidrBlock: !Ref EKSPrivateSubAZ2CidrBlock
      AvailabilityZone: !Ref AvailabilityZoneSelection2
      Tags:
        - Value: EKS-PRIV-SUB-AZ-2
          Key: Name
  
########################################################
#Create Internet Gateway, Nat Gateway, and Route Tables#
########################################################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: EKS-DEMO-IGW
  
  AttachGatewayToVpc:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref EksDemoVpc
      InternetGatewayId: !Ref InternetGateway
    
  NatPubIPAZ1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EKS-DEMO-NAT-EIP-AZ1
  
  EKSNatGatewayAZ1:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref EksDemoPubSubAZ1
      AllocationId: !GetAtt NatPubIPAZ1.AllocationId
      Tags:
        - Value: EKS-NATG-AZ1
          Key: Name
  
  NatPubIPAZ2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EKS-DEMO-NAT-EIP-AZ2
  
  EKSNatGatewayAZ2:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref EksDemoPubSubAZ2
      AllocationId: !GetAtt NatPubIPAZ2.AllocationId
      Tags:
        - Value: EKS-NATG-AZ2
          Key: Name

  EKSPubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EksDemoVpc
      Tags:
        - Key: Name
          Value: EKS-DEMO-PUBlIC-RT
  
  EKSPrivRouteTableAZ1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EksDemoVpc
      Tags:
        - Key: Name
          Value: EKS-DEMO-PRIVATE-RT-AZ1

  EKSPrivRouteTableAZ2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref EksDemoVpc
      Tags:
        - Key: Name
          Value: EKS-DEMO-PRIVATE-RT-AZ2
  
  EKSPubSubnetAssociationAz1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EKSPubRouteTable
      SubnetId: !Ref EksDemoPubSubAZ1

  EKSPubSubnetAssociationAz2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EKSPubRouteTable
      SubnetId: !Ref EksDemoPubSubAZ2

  EKSPrivSubnetAssociationAz1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EKSPrivRouteTableAZ1
      SubnetId: !Ref EksDemoPrivSubAZ1
  
  EKSPrivSubnetAssociationAz2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EKSPrivRouteTableAZ2
      SubnetId: !Ref EksDemoPrivSubAZ2
  
  EKSPubRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref EKSPubRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
    
  EKSPrivRouteAZ1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref EKSPrivRouteTableAZ1
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref EKSNatGatewayAZ1
    
  EKSPrivRouteAZ2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref EKSPrivRouteTableAZ2
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref EKSNatGatewayAZ2

  EKSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow Incoming Connection on Port 5000 to the EKS Cluster"
      GroupName: "EKS-DEMO-SG"
      VpcId: !Ref EksDemoVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: "0.0.0.0/0"
      Tags:
        - Value: EKS-DEMO-SG
          Key: Name
  
Outputs:
  PublicRT:
    Value: !Ref EKSPubRouteTable
    Description: Public Route Table ID
  
  EksInternetG:
    Value: !Ref InternetGateway
    Description: Internet Gateway ID

  PrivateRTAZ1:
    Value: !Ref EKSPrivRouteTableAZ1
    Description: Private RT AZ1 ID

  PrivateRTAZ2:
    Value: !Ref EKSPrivRouteTableAZ2
    Description: Private RT AZ2 ID
  
  NatGAZ1:
    Value: !Ref EKSNatGatewayAZ1
    Description: NatG AZ1 ID

  NatGAZ2:
    Value: !Ref EKSNatGatewayAZ2
    Description: NatG AZ2 ID
